// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`07 O17 — pickups: the routes answer exactly as before the move > cancel, and a cancel of an unknown pickup 1`] = `
[
  {
    "body": {
      "ok": true,
    },
    "status": 200,
  },
  500,
  [
    {
      "carrierId": "test-carrier-manual",
      "daysOfWeek": null,
      "externalRef": null,
      "isRecurring": false,
      "lastDispatchErr": null,
      "scheduledFor": "2026-11-03T09:00:00.000Z",
      "status": "CANCELLED",
    },
    {
      "carrierId": "test-carrier-manual",
      "daysOfWeek": 21,
      "externalRef": null,
      "isRecurring": true,
      "lastDispatchErr": null,
      "scheduledFor": null,
      "status": "ACTIVE",
    },
    {
      "carrierId": "test-carrier-sc",
      "daysOfWeek": null,
      "externalRef": "TEST-PU-1",
      "isRecurring": false,
      "lastDispatchErr": null,
      "scheduledFor": "2026-11-04T09:00:00.000Z",
      "status": "ACTIVE",
    },
    {
      "carrierId": "test-carrier-sc",
      "daysOfWeek": null,
      "externalRef": "TEST-PU-2",
      "isRecurring": false,
      "lastDispatchErr": null,
      "scheduledFor": "2026-11-05T09:00:00.000Z",
      "status": "ACTIVE",
    },
    {
      "carrierId": "test-carrier-sc",
      "daysOfWeek": null,
      "externalRef": null,
      "isRecurring": false,
      "lastDispatchErr": "Test: no pickup that day",
      "scheduledFor": "2026-11-06T09:00:00.000Z",
      "status": "ACTIVE",
    },
  ],
]
`;

exports[`07 O17 — pickups: the routes answer exactly as before the move > refusals; MANUAL one-time and recurring; Sendcloud from the warehouse sender, the default sender, and refused 1`] = `
[
  {
    "body": {
      "error": "Carrier not connected",
    },
    "status": 404,
  },
  {
    "body": {
      "error": "scheduledFor required for one-time pickup",
    },
    "status": 400,
  },
  {
    "body": {
      "error": "daysOfWeek bitmap required for recurring pickup",
    },
    "status": 400,
  },
  {
    "body": {
      "ok": true,
      "pickup": {
        "carrierId": "test-carrier-manual",
        "contactName": null,
        "contactPhone": null,
        "createdAt": "<made>",
        "daysOfWeek": null,
        "externalRef": null,
        "id": "<made>",
        "isRecurring": false,
        "lastDispatchAt": null,
        "lastDispatchErr": null,
        "notes": "Gate B",
        "scheduledFor": "2026-11-03T09:00:00.000Z",
        "status": "ACTIVE",
        "updatedAt": "<made>",
        "warehouseId": null,
        "windowEnd": "12:00",
        "windowStart": "09:00",
        "workspaceId": "<made>",
      },
    },
    "status": 200,
  },
  {
    "body": {
      "ok": true,
      "pickup": {
        "carrierId": "test-carrier-manual",
        "contactName": null,
        "contactPhone": null,
        "createdAt": "<made>",
        "daysOfWeek": 21,
        "externalRef": null,
        "id": "<made>",
        "isRecurring": true,
        "lastDispatchAt": null,
        "lastDispatchErr": null,
        "notes": null,
        "scheduledFor": null,
        "status": "ACTIVE",
        "updatedAt": "<made>",
        "warehouseId": null,
        "windowEnd": null,
        "windowStart": "14:00",
        "workspaceId": "<made>",
      },
    },
    "status": 200,
  },
  {
    "body": {
      "ok": true,
      "pickup": {
        "carrierId": "test-carrier-sc",
        "contactName": null,
        "contactPhone": null,
        "createdAt": "<made>",
        "daysOfWeek": null,
        "externalRef": "TEST-PU-1",
        "id": "<made>",
        "isRecurring": false,
        "lastDispatchAt": "<made>",
        "lastDispatchErr": null,
        "notes": "Two parcels",
        "scheduledFor": "2026-11-04T09:00:00.000Z",
        "status": "ACTIVE",
        "updatedAt": "<made>",
        "warehouseId": "test-wh",
        "windowEnd": null,
        "windowStart": null,
        "workspaceId": "<made>",
      },
    },
    "status": 200,
  },
  {
    "body": {
      "ok": true,
      "pickup": {
        "carrierId": "test-carrier-sc",
        "contactName": null,
        "contactPhone": null,
        "createdAt": "<made>",
        "daysOfWeek": null,
        "externalRef": "TEST-PU-2",
        "id": "<made>",
        "isRecurring": false,
        "lastDispatchAt": "<made>",
        "lastDispatchErr": null,
        "notes": null,
        "scheduledFor": "2026-11-05T09:00:00.000Z",
        "status": "ACTIVE",
        "updatedAt": "<made>",
        "warehouseId": null,
        "windowEnd": null,
        "windowStart": null,
        "workspaceId": "<made>",
      },
    },
    "status": 200,
  },
  {
    "body": {
      "ok": true,
      "pickup": {
        "carrierId": "test-carrier-sc",
        "contactName": null,
        "contactPhone": null,
        "createdAt": "<made>",
        "daysOfWeek": null,
        "externalRef": null,
        "id": "<made>",
        "isRecurring": false,
        "lastDispatchAt": null,
        "lastDispatchErr": "Test: no pickup that day",
        "notes": null,
        "scheduledFor": "2026-11-06T09:00:00.000Z",
        "status": "ACTIVE",
        "updatedAt": "<made>",
        "warehouseId": null,
        "windowEnd": null,
        "windowStart": null,
        "workspaceId": "<made>",
      },
    },
    "status": 200,
  },
  [
    {
      "notes": "Two parcels",
      "pickupDate": "2026-11-04",
      "senderAddressId": 77,
    },
    {
      "notes": undefined,
      "pickupDate": "2026-11-05",
      "senderAddressId": 12,
    },
    {
      "notes": undefined,
      "pickupDate": "2026-11-06",
      "senderAddressId": 12,
    },
  ],
]
`;
